# axvisor

./: .gitignore  .gitmodules  .rustfmt.toml  Boot-on-qemu.md  Cargo.toml  HOW-to.md  Makefile  README.md  README_CN.md  auto_interrupt.sh  axvisor.sh  build.rs  make.sh  quick-start.sh  rust-toolchain.toml
.cargo/: config.toml
.devspace/: state.json
.github/workflows/: build.yml  check.yml  qemu-aarch64.toml  qemu-x86_64.toml  release.yml  test-board.yml  test-qemu.yml  test.yml  uboot.toml
axvisor-build/: Cargo.toml
configs/: def_hvconfig.toml  defconfig.toml
configs/board/: orangepi-5-plus.toml  phytiumpi.toml  qemu-aarch64.toml  qemu-riscv64.toml  qemu-x86_64.toml  rdk-s100.dtb  roc-rk3568-pc.toml
configs/vms/: arceos-aarch64-e2000-smp1.toml  arceos-aarch64-e2000-smp2.toml  arceos-aarch64-e2000_smp1.toml  arceos-aarch64-e2000_smp2.toml  arceos-aarch64-qemu-smp1.toml  arceos-aarch64-rk3568-smp1.toml  arceos-aarch64-rk3568-smp2.toml  arceos-aarch64-rk3568_smp1.toml  arceos-aarch64-rk3568_smp2.dts  arceos-aarch64-rk3568_smp2.toml  arceos-aarch64-smp.toml  arceos-aarch64-tac_e400-smp1.toml  arceos-aarch64.toml  arceos-riscv64-qemu-smp1.toml  arceos-riscv64-smp.toml  arceos-riscv64.toml  arceos-x86_64.toml  arceos_smp1.dts  linux-a1000-aarch64-smp8.toml  linux-aarch64-a1000-smp8.toml  linux-aarch64-e2000-smp1.toml  linux-aarch64-e2000-smp2.toml  linux-aarch64-e2000_smp1.toml  linux-aarch64-e2000_smp2.toml  linux-aarch64-qemu-smp1.toml  linux-aarch64-rk3568-smp1.toml  linux-aarch64-rk3568-smp2.toml  linux-aarch64-rk3568_smp1.dts  linux-aarch64-rk3568_smp1.toml  linux-aarch64-rk3568_smp2.dts  linux-aarch64-rk3568_smp2.toml  linux-aarch64-rk3588-smp8.toml  linux-aarch64-s100-smp1.dts  linux-aarch64-s100-smp1.toml  linux-aarch64-tac_e400-smp1.toml  linux-qemu-aarch64-gicv3-a.toml  linux-qemu-aarch64-gicv3-b.toml  linux-qemu-aarch64-mem.toml  linux-qemu-aarch64-vm2.toml  linux-qemu-aarch64.toml  (+10 more)
configs/vms_bkp/: arceos-aarch64-e2000_smp1.toml  arceos-aarch64.toml  arceos-rk3588-aarch64-vm2.toml  hvconfig-nimbos-aarch64.toml  linux-qemu-aarch64-mem.toml  linux-qemu-aarch64-smp2.toml  linux-qemu-aarch64.toml  linux-rk3588-aarch64-smp-vm1.toml  starry-aarch64.toml  starry-x86_64.toml
crates/nop/: Cargo.toml
crates/nop/src/: lib.rs
doc/: 00_AXVISOR_BUILD.md  00_AXVISOR_STARTUP.md  01_AXVISOR_SCHEDULER_ANALYSIS.md  02_RTOS_SCHEDULER_DESIGN.md  03_AXVISOR_RTOS_MIGRATION_PLAN.md  FDT_Configuration_Guide.md  README.md  Shell模块介绍.md  dependency-aware-testing.md  old.drawio  qemu-quickstart.md  qemu-quickstart_cn.md  refactor-vm.dio  refactor.dio  refactor.md  shell.md
doc/changelog/v0.3.0/: AxVCpu.md  layout.dio
examples/: .clang-format  .gitignore  Makefile  hypercall.c  libos.c  shm.c
examples/include/: hypercall.h  shm.h
kernel/: Cargo.toml  build.rs
kernel/src/: main.rs  memory_api.rs  task.rs
kernel/src/hal/: mod.rs
kernel/src/hal/arch/aarch64/: mod.rs
kernel/src/hal/arch/riscv64/: mod.rs
kernel/src/shell/: completion.rs  mod.rs  shell.rs  shell_impl.rs
kernel/src/shell/command/: base.rs  vm.rs
kernel/src/shell/commands/: builtin.rs  fs.rs  mod.rs  vm.rs
kernel/src/shell/parser/: history.rs  mod.rs  parser_impl.rs
kernel/src/vmm/: config.rs  mod.rs  vcpus.rs  vm_list.rs
kernel/src/vmm/fdt/: create.rs  device.rs  parser.rs
kernel/src/vmm/fdt/vm_fdt/: mod.rs  writer.rs
kernel/src/vmm/images/: mod.rs
modules/axalloc/: Cargo.toml
modules/axalloc/src/: lib.rs  page.rs
modules/axconfig/: Cargo.toml
modules/axdriver2/: Cargo.toml
modules/axfs/: Cargo.toml
modules/axfs/src/: dev.rs  fops.rs  lib.rs  mounts.rs  partition.rs  root.rs
modules/axfs/src/api/: dir.rs  file.rs
modules/axfs/src/fs/: ext4fs.rs  fatfs.rs  mod.rs  ramfs.rs
modules/axruntime/: Cargo.toml
modules/axvdev/: Cargo.toml
modules/axvisor/: Cargo.toml  build.rs
modules/axvisor-shell/: Cargo.toml
modules/axvisor-shell/src/: completion.rs  lib.rs  shell.rs
modules/axvisor-shell/src/command/: base.rs  mod.rs  vm.rs
modules/axvisor-shell/src/commands/: builtin.rs  fs.rs  mod.rs  vm.rs
modules/axvisor-shell/src/parser/: node.rs
modules/axvisor-vmm/: Cargo.toml
modules/axvisor-vmm/src/: lib.rs
modules/axvisor-vmm/src/images/: mod.rs
modules/axvisor/src/: main.rs
modules/axvisor/src/hal/arch/aarch64/: mod.rs
modules/axvisor/src/shell/: mod.rs
modules/axvisor/src/shell/command/: base.rs  vm.rs
modules/axvisor/src/vmm/: config.rs  mod.rs  vcpus.rs
modules/axvisor/src/vmm/fdt/: create.rs  device.rs  print.rs
modules/axvm-types/: Cargo.toml
modules/driver/: Cargo.toml
modules/vdev-if/: Cargo.toml
modules/vdev-if/src/: lib.rs
platform/aarch64-generic/: Cargo.toml
platform/aarch64-generic/src/: lib.rs
platform/aarch64-phytium-pi/: Cargo.toml  axconfig.toml
platform/aarch64-roc-rk3568-pc/: Cargo.toml  axconfig.toml
platform/riscv64-qemu-virt/: Cargo.toml  axconfig.toml
platform/x86-qemu-q35/: Cargo.toml  build.rs  linker.lds.S
scripts/: auto_interrupt.sh  bootstrap.sh  build.py  ci_run_qemu_nimbos.py  clean.py  clippy.py  config.py  dev_deps.sh  dev_env.py  disk_img.py  nimbos.sh  requirements.txt  run.py  setup.py  setup_qemu.sh  setup_qemu_arceos.sh  setup_qemu_linux.sh  setup_qemu_nimbos.sh  task.py
scripts/lds/: linker_linux.lds.S
scripts/make/: deps.mk  features.mk  platform.mk  qemu.mk  rk3588.mk  rockchip.mk
scripts/ostool/: qemu-aarch64.toml  qemu-riscv64.toml
scripts/vmm/: scp.mk
src/: hal.rs  logo.rs  main.rs  region.rs  task.rs  task_ext.rs
src/driver/blk/: mod.rs  (+2 more)
src/hal/: mod.rs
src/libos/: config.rs  def.rs  eaddrspace.rs  gaddrspace.rs  gpt.rs  hvc.rs  instance.rs  mod.rs  percpu.rs  process.rs  region.rs  run.rs
src/shell/: mod.rs
src/vmm/: config.rs  fdt.rs  hypercall.rs  images.rs  ivc.rs  mod.rs  timer.rs  vcpus.rs  vm_list.rs
tool/: axvisor  axvisor.ko  check.sh  check_branch.sh  dev_env.py  extboot.sh
xtask/: Cargo.toml
xtask/src/: affected.rs  cargo.rs  ctx.rs  devspace.rs  image.rs  main.rs  menuconfig.rs  tbuld.rs
xtask/src/image/: config.rs  download.rs  registry.rs  storage.rs
(+53 files in other folders)
