[workspace]
members = [
  "crates/*",
  "modules/*",
  "xtask",
  "kernel",
]
resolver = "3"

[profile.release]
lto = true

[workspace.package]

authors = ["Keyang Hu <keyang.hu@qq.com>", "周睿 <zrufo747@outlook.com>"]
edition = "2024"
license = "Apache-2.0"
version = "0.3.0"

[workspace.dependencies]
bitflags = "2.2"
cfg-if = "1.0"
cpumask = "0.1.0"
kernel_guard = "0.1"
kspin = "0.1"
lazy_static = {version = "1.5", default-features = false, features = ["spin_no_std"]}
lazyinit = "0.2"
log = "0.4"
spin = "0.9"
timer_list = "0.1"
toml = "0.9"
hashbrown = "0.14"

# System dependent modules provided by ArceOS.
# FIXME: pin to a specific tag!
axstd = {version = "=0.2.2-hv.3", features = [
  "alloc-level-1",
  "paging",
  "irq",
  "multitask",
  "task-ext",
  "smp",
]}

axconfig = "0.2.2-hv.3"

# System dependent modules provided by ArceOS-Hypervisor.
axaddrspace = "0.1.4"
axhvc = "0.2"
axklib = "0.2"

axvcpu = "0.1"
axvm = {git = "https://github.com/arceos-hypervisor/axvm.git", branch = "next"}

# System independent crates provided by ArceOS, these crates could be imported by remote url. 
axerrno = "0.2"
byte-unit = {version = "5", default-features = false, features = ["byte"]}
crate_interface = "0.1"
fdt-parser = "0.4"
memory_addr = "0.4"
page_table_entry = {version = "0.5", features = ["arm-el2"]}
page_table_multiarch = "0.5"
percpu = {version = "0.2", features = ["arm-el2"]}
rdif-intc = "0.12"
rdrive = "0.18"

axdevice = "0.2"
axdevice_base = "0.1"
axvisor_api = "0.1"
driver = {path = "modules/driver"}

# platform
axvmconfig = "0.2.1"

[patch.crates-io]
axvcpu = {git = "https://github.com/arceos-hypervisor/axvcpu.git", branch = "next"}

