[workspace]
members = [
  "modules/*",
  "xtask",
  "kernel",
]
resolver = "3"

[profile.release]
lto = true

[workspace.package]

authors = ["Keyang Hu <keyang.hu@qq.com>", "周睿 <zrufo747@outlook.com>"]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
bitflags = "2.2"
cfg-if = "1.0"
cpumask = "0.1.0"
kernel_guard = "0.1"
kspin = "0.1"
lazy_static = {version = "1.5", default-features = false, features = ["spin_no_std"]}
lazyinit = "0.2"
log = "0.4"
spin = "0.9"
timer_list = "0.1"
toml = "0.9"
hashbrown = "0.14"

# System dependent modules provided by ArceOS.
# FIXME: pin to a specific tag!
axstd = { version = "=0.2.2-hv.4", features = [
  "alloc-level-1",
  "paging",
  "irq",
  "multitask",
  "task-ext",
  "smp", # "page-alloc-64g",
]}

axalloc = { version = "=0.2.2-hv.4" }
axconfig = { version = "=0.2.2-hv.4" }
axdisplay = { version = "=0.2.2-hv.4" }
axdriver = { version = "=0.2.2-hv.4" }
axhal = { version = "=0.2.2-hv.4" }
axipi = { version = "=0.2.2-hv.4" }
axlog = { version = "=0.2.2-preview.1" }
axmm = { version = "=0.2.2-hv.4" }
axnet = { version = "=0.2.2-hv.4" }
axtask = { version = "=0.2.2-hv.4" }

axcpu = "0.3.0-preview.3"
axplat = { version = "0.3.1-pre.1", features = ["smp"] }

# System dependent modules provided by ArceOS-Hypervisor.
axaddrspace = "0.1.4"
axhvc = "0.2"
axklib = "0.2"
axruntime = { version = "=0.2.2-hv.4" }
axfs = { version = "=0.2.2-hv.4" }
axvcpu = "0.2"
axvm = "0.2"

# System independent crates provided by ArceOS, these crates could be imported by remote url. 
axerrno = "0.2"
byte-unit = {version = "5", default-features = false, features = ["byte"]}
crate_interface = "0.1"
fdt-parser = "0.4"
memory_addr = "0.4"
page_table_entry = {version = "0.5", features = ["arm-el2"]}
page_table_multiarch = "0.5"
percpu = {version = "0.2", features = ["arm-el2"]}
rdif-intc = "0.12"
rdrive = "0.18"

axdevice = "0.2"
axdevice_base = "0.2"
axvisor_api = "0.1"
driver = {path = "modules/driver"}

# platform
axvmconfig = "0.2"

