[workspace]
members = [".", "axvisor-build"]
resolver = "3"

[package]
name = "axvisor"
authors = ["Keyang Hu <keyang.hu@qq.com>", "周睿 <zrufo747@outlook.com>"]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0-preview.3"
description = "A lightweight type-1 hypervisor based on ArceOS"
repository = "https://github.com/arceos-hypervisor/axvisor"
homepage = "https://github.com/arceos-hypervisor/axvisor"
documentation = "https://docs.rs/axvisor"
readme = "README.md"
keywords = ["hypervisor", "virtualization", "arceos", "type-1"]
categories = ["os", "no-std", "embedded"]

[profile.release]
lto = true

[features]
ept-level-4 = ["axaddrspace/4-level-ept"]
fs = ["axstd/fs", "axruntime/fs"]
dyn-plat = ["axstd/myplat", "axstd/driver-dyn", "axruntime/driver-dyn"]
# Driver features (from former driver crate)
rk3568-clk = ["dep:rk3568_clk"]
rk3588-clk = ["dep:rk3588-clk"]
sdmmc = ["dep:sdmmc"]
rockchip-pm = ["dep:rockchip-pm"]
phytium-blk = ["dep:phytium-mci"]

[dependencies]
bitflags = "2.2"
cfg-if = "1.0"
cpumask = "0.1.0"
kernel_guard = "0.1"
kspin = "0.1"
lazy_static = {version = "1.5", default-features = false, features = ["spin_no_std"]}
lazyinit = "0.2"
log = "0.4"
spin = "0.9"
timer_list = "0.1.0"
hashbrown = "0.14"

# System dependent modules provided by ArceOS.
axstd = { version = "=0.2.2-hv.5", features = [
  "alloc-level-1",
  "paging",
  "irq",
  "multitask",
  "task-ext",
  "smp",
]}

# System dependent modules provided by ArceOS-Hypervisor.
axaddrspace = "=0.1.4"
axhvc = "=0.2.0"
axruntime = { version = "=0.2.2-hv.5", features = ["alloc", "irq", "paging", "smp", "multitask", "plat-hv-aarch64"] }
axvcpu = "=0.2.1"
axvm = "=0.2.1"

# System independent crates provided by ArceOS, these crates could be imported by remote url.
axerrno = "=0.2.2"
byte-unit = {version = "5", default-features = false, features = ["byte"]}
crate_interface = "=0.1.4"
extern-trait = "=0.2.0"
fdt-parser = "0.4"
memory_addr = "=0.4.1"
page_table_entry = {version = "=0.5.7", features = ["arm-el2"]}
page_table_multiarch = "=0.5.7"
percpu = {version = "=0.2.0", features = ["arm-el2"]}
rdif-intc = "=0.12.1"
rdrive = "=0.18.11"

axdevice = "=0.2.1"
axdevice_base = "=0.2.1"
axvisor_api = "=0.1.0"

# Driver dependencies (from former driver crate)
axklib = "=0.2.0"
rdif-block = "=0.6.2"
rdif-clk = "0.4"
rk3568_clk = { version = "0.1", optional = true }
sdmmc = { version = "0.1", default-features = false, features = ["pio"], optional = true }
rk3588-clk = { version = "0.1", optional = true }
rockchip-pm = { version = "0.4", optional = true }
phytium-mci = { version = "0.1", default-features = false, features = ["pio"], optional = true }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu-ext = "0.1"
arm-gic-driver = {version = "=0.15.9", features = ["rdif"]}

[build-dependencies]
axconfig = "=0.2.2-hv.5"
prettyplease = "0.2"
quote = "1.0"
syn = "2.0"
toml = "0.9"
anyhow = "1.0"

