[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "axvisor"
version.workspace = true

[features]
dyn-plat = ["axstd/myplat", "axstd/driver-dyn"]
fs = ["axstd/fs"]

[dependencies]
anyhow = {version = "1.0", default-features = false}
bitflags.workspace = true
cfg-if.workspace = true
cpumask.workspace = true
kernel_guard.workspace = true
kspin = "0.1"
lazyinit = "0.2"
log = "0.4"
timer_list = "0.1.0"
toml = {version = "0.9", default-features = false}

# System dependent modules provided by ArceOS.
axstd.workspace = true

# System dependent modules provided by ArceOS-Hypervisor.
axhvc.workspace = true
axvm.workspace = true
axvmconfig = { workspace = true }

axvisor-vmm = { path = "/home/yanlien/Workspace/QCL/console/axvisor/modules/axvisor-vmm", default-features = false }
axvisor-shell = { path = "/home/yanlien/Workspace/QCL/console/axvisor/modules/axvisor-shell", default-features = false }

# System independent crates provided by ArceOS, these crates could be imported by remote url. 
axerrno.workspace = true
byte-unit = {version = "5", default-features = false, features = ["byte"]}
extern-trait = "0.2"
memory_addr.workspace = true
driver.workspace = true
