[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "axvisor"
version.workspace = true

[features]
dyn-plat = ["axstd/myplat", "axstd/driver-dyn"]
fs = ["axstd/fs"]

[dependencies]
anyhow = {version = "1.0", default-features = false}
bitflags.workspace = true
cfg-if.workspace = true
cpumask.workspace = true
kernel_guard.workspace = true
kspin = "0.1"
lazy_static = {version = "1.5", default-features = false, features = ["spin_no_std"]}
lazyinit = "0.2"
log = "0.4"
spin = "0.9"
timer_list = "0.1.0"
toml = {version = "0.9", default-features = false}

# System dependent modules provided by ArceOS.
axstd.workspace = true

# System dependent modules provided by ArceOS-Hypervisor.
axhvc.workspace = true
axvm.workspace = true
axvmconfig = {workspace = true}

# System independent crates provided by ArceOS, these crates could be imported by remote url. 
axerrno.workspace = true
byte-unit = {version = "5", default-features = false, features = ["byte"]}
extern-trait = "0.2"
memory_addr.workspace = true
driver.workspace = true

[build-dependencies]
anyhow = "1.0"
axconfig.workspace = true
prettyplease = "0.2"
quote = "1.0"
syn = "2.0"
toml.workspace = true
