[package]
edition = "2024"
name = "xtask"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.23"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
colored = "3"
ostool = "0.8"
jkconfig = "0.1"
schemars = { version = "1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml.workspace = true

axvmconfig = { workspace = true, features = ["std"] }
