[package]
name = "axvisor-build"
version = "0.1.0-preview.2"
edition = "2024"
license = "Apache-2.0"
description = "Build tool for Axvisor hypervisor"
repository = "https://github.com/arceos-hypervisor/axvisor"
homepage = "https://github.com/arceos-hypervisor/axvisor"
documentation = "https://docs.rs/axvisor"

[target.'cfg(any(windows, unix))'.dependencies]

anyhow = "1.0"
cargo_metadata = "0.23"
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "4.4", features = ["derive"]}
colored = "3"
jkconfig = "0.1"
ostool = "0.8.4"
regex = "1.12"
reqwest = "0.13"
schemars = {version = "1", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1"
sha2 = "0.10"
tokio = {version = "1", features = ["full"]}
toml = "0.9"

axvmconfig = {version = "0.2", features = ["std"]}
tar = "0.4"
flate2 = "1.0"
