[package]
name = "axfs"
description = "Axvisor filesystem module"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
use-ramdisk = []

[dependencies]
axdriver = {workspace = true, features = ["block"]}
axdriver_block = {git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.2"}
axerrno = "0.1"
axfs_devfs = {version = "0.1"}
axfs_ramfs = {version = "0.1"}
axfs_vfs = "0.1"
axio = {version = "0.1", features = ["alloc"]}
axsync = {workspace = true}
cap_access = "0.1"
cfg-if = "1.0"
lazyinit = "0.2"
log = "0.4"
lwext4_rust = {git = "https://github.com/Josen-B/lwext4_rust.git"}

[dependencies.fatfs]
default-features = false
features = [
  # no std
  "alloc",
  "lfn",
  "log_level_trace",
  "unicode",
]
git = "https://github.com/rafalh/rust-fatfs"
rev = "4eccb50"

[dev-dependencies]
axdriver = {workspace = true, features = ["block", "ramdisk"]}
axdriver_block = {git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.2", features = ["ramdisk"]}
axsync = {workspace = true, features = ["multitask"]}
axtask = {workspace = true, features = ["test"]}
