[package]
name = "axfs"
description = "Axvisor filesystem module"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
use-ramdisk = []

[dependencies]
axdriver = {workspace = true, features = ["block"]}
axdriver_block = {git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.2"}
axerrno = "0.2"
axfs-ng-vfs = {path = "../../crates/axfs-ng-vfs"}
axio = {version = "0.3.0-pre.1", features = ["alloc"]}
axpoll = "0.1"
cap_access = "0.1"
lazyinit = "0.2"
spin = "0.9"
log = "0.4"
rsext4 = {git = "https://github.com/Dirinkbottle/rsext4.git", tag = "dev-251222"}

[dependencies.fatfs]
default-features = false
features = [
  # no std
  "alloc",
  "lfn",
  "log_level_trace",
  "unicode",
]
git = "https://github.com/Josen-B/rust-fatfs.git"
rev = "41122ef"

[dev-dependencies]
axdriver = {workspace = true, features = ["block", "ramdisk"]}
axdriver_block = {git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.2", features = ["ramdisk"]}