[package]
name = "axfs"
authors.workspace = true
description = "Axvisor filesystem module"
edition.workspace = true
license.workspace = true
version = "0.2.2-preview.2"
repository = "https://github.com/arceos-hypervisor/axvisor"

[features]
use-ramdisk = []

[dependencies]
axdriver = {workspace = true, features = ["block"]}
axdriver_block = "0.1.4-preview.3"
axerrno = "0.1"
axfs_ramfs = {version = "0.1"}
axfs_vfs = "0.1"
axio = {version = "0.2", features = ["alloc"]}
cap_access = "0.1"
lazyinit = "0.2"
spin = "0.9"
log = "0.4"
rsext4 = "0.1.0-pre.0"

[dependencies.fatfs]
package = "starry-fatfs"
version = "0.4.1-preview.2"
default-features = false
features = [
  # no std
  "alloc",
  "lfn",
  "log_level_trace",
  "unicode",
]

[dev-dependencies]
axdriver = {workspace = true, features = ["block", "ramdisk"]}
axdriver_block = {version = "0.1.4-preview.3", features = ["ramdisk"]}