[package]
name = "axvisor-shell"
version = "0.1.0"
edition = "2024"

[features]
default = []
fs = ["axstd/fs"]

[dependencies]
log = "0.4"
lazy_static = {version = "1.5", default-features = false, features = ["spin_no_std"]}

# System dependent modules provided by ArceOS.
axstd.workspace = true

axvm = { path = "../axvm" }
axvisor-vmm = { path = "../axvisor-vmm" }
