[package]
name = "axvisor-shell"
version = "0.1.0"
edition = "2024"

[features]
default = ["fs"]
fs = ["axstd/fs"]

[dependencies]
anyhow = {version = "1.0", default-features = false}
log = "0.4"
lazy_static = {version = "1.5", default-features = false, features = ["spin_no_std"]}
toml = { version = "0.9", default-features = false }

# System dependent modules provided by ArceOS.
axstd.workspace = true

axvm = { path = "../axvm" }
axvisor-vmm = { path = "../axvisor-vmm" }
