[package]
name = "axvisor-vmm"
version = "0.1.0"
edition = "2024"

[features]
default = []
fs = ["axstd/fs"]

[dependencies]
anyhow = {version = "1.0", default-features = false}
log = "0.4"
toml = { version = "0.9", default-features = false }
spin = "0.9"

axstd.workspace = true
axvm = { path = "../axvm" }
axvmconfig = { version = "0.1", default-features = false }

[build-dependencies]
anyhow = "1.0"
axconfig.workspace = true
prettyplease = "0.2"
quote = "1.0"
syn = "2.0"
toml.workspace = true
