[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "axvisor"

[features]
ept-level-4 = ["axaddrspace/4-level-ept"]
fs = ["axstd/fs"]

[dependencies]
bitflags.workspace = true
cfg-if.workspace = true
cpumask.workspace = true
kernel_guard.workspace = true
kspin = "0.1"
lazy_static = {version = "1.5", default-features = false, features = ["spin_no_std"]}
lazyinit = "0.2"
log = "0.4"
spin = "0.9"
timer_list = "0.1.0"

# System dependent modules provided by ArceOS.
axstd = {workspace = true, features = [
  "alloc-level-1",
  "paging",
  "irq",
  "multitask",
  "smp",
  "myplat",
  "driver-dyn",
]}

# System dependent modules provided by ArceOS-Hypervisor.
axaddrspace.workspace = true
axhvc.workspace = true
axvcpu.workspace = true
axvm.workspace = true

# System independent crates provided by ArceOS, these crates could be imported by remote url. 
axerrno = "0.1.0"
byte-unit = {version = "5", default-features = false, features = ["byte"]}
crate_interface = "0.1"
fdt-parser = "0.4"
memory_addr = "0.4"
page_table_entry = {version = "0.5", features = ["arm-el2"]}
page_table_multiarch = "0.5"
percpu = {version = "0.2", features = ["arm-el2"]}
rdif-intc = "0.12"
rdrive = "0.18"

vm-fdt = {workspace = true, default-features = false, features = ["alloc"]}

axdevice.workspace = true
axdevice_base = "0.1"
axvisor_api = "0.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
axplat-x86-qemu-q35 = {workspace = true}

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu-ext = "0.1"
arm-gic-driver = {version = "0.15.5", features = ["rdif"]}
axplat-aarch64-generic = {workspace = true}

[build-dependencies]
axconfig = {git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm-dev"}
prettyplease = "0.2"
quote = "1.0"
syn = "2.0"
toml = {version = "0.9"}
