[package]
edition = "2024"
name = "axplat-aarch64-generic"
version = "0.1.0"

[dependencies]
axplat-aarch64-dyn = {git = "https://github.com/arceos-hypervisor/axplat-aarch64-dyn", tag = "v0.1.3", features = ["irq", "smp", "hv"]}

[build-dependencies]
serde = {version = "1.0", features = ["derive"]}
toml = "0.8"
